# HydroWriter

./: .gitignore  pyproject.toml
configs/: chs_book.yaml  engines.yaml
hydrowriter/: __init__.py  config.py  mcp_server.py
hydrowriter/agents/: __init__.py  editor_agent.py  numbering_agent.py  reviewer_agent.py  writer_agent.py
hydrowriter/cli/: __init__.py  main.py
hydrowriter/engine/: __init__.py  base_engine.py  claude_engine.py  factory.py  gemini_engine.py  openai_engine.py
hydrowriter/merge/: __init__.py  consensus.py
hydrowriter/pipeline/: __init__.py  book_pipeline.py  ppt_pipeline.py
hydrowriter/tools/: __init__.py  chart_engine.py  formula_engine.py
tests/: test_agents.py  test_config.py  test_engine.py  test_pipeline.py  test_tools.py
